--- a/src/styles/notificationIcons.scss
+++ b/src/styles/notificationIcons.scss
@@ -75,7 +75,7 @@
   .typeIcon,
   .notificationIcons {
     align-items: flex-end;
-    padding-bottom: var(--ds-size-100, $ds-size-100);
+    padding-bottom: var(--ds-size-50, $ds-size-50);
   }
 }
 
